--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ leetcode/.gradle
 leetcode/learn/build
 hackerrank/.gradle
 hackerrank/interviewpreparationkit/build
+kattis/.gradle
+kattis/problems/build
