Add junit dependency

--- a/hackerrank/threemonthpreparationkit/pom.xml
+++ b/hackerrank/threemonthpreparationkit/pom.xml
@@ -11,6 +11,23 @@
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
+        <org.junit.jupiter-version>5.8.2</org.junit.jupiter-version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${org.junit.jupiter-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${org.junit.jupiter-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
