--- a/leetcode/learn/build.gradle
+++ b/leetcode/learn/build.gradle
@@ -10,6 +10,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.mockito:mockito-core:3.12.4'
 }
